# cognivue

./: README.md  package.json  pnpm-lock.yaml
backend/: alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/app/config/: app.py  pusher.py
backend/app/controllers/: auth_controller.py  user_controller.py
backend/app/database/: config.py  models.py
backend/app/routes/: auth_routes.py  user_routes.py  workflow_routes.py
backend/app/schemas/: auth_schema.py  vuespace_schema.py
backend/app/utils/: hashing.py  jwt.py
frontend/: .gitignore  README.md  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/auth/: actions.ts
frontend/src/app/dashboard/: page.tsx
frontend/src/app/file/: page.tsx
frontend/src/app/try/: page.tsx  x_page.tsx  y_page.tsx
frontend/src/app/vuespace/: page.tsx
frontend/src/auth/: server.ts
frontend/src/components/: action-center.tsx  features-section.tsx  footer.tsx  header.tsx  hero-section.tsx  participants.tsx  pricing-section.tsx  schema-visualizer.tsx  table.tsx  tabs.tsx  template-switcher.tsx
frontend/src/config/: site.ts
frontend/src/db/: schema.prisma
frontend/src/lib/: actions.ts  features.tsx  utils.ts
frontend/src/lib/api/: index.ts
frontend/src/providers/: theme-provider.tsx
frontend/src/types/: action.ts  api.type.ts  priority.ts
src/app/: page.tsx
src/components/: header.tsx  schema-visualizer.tsx  template-switcher.tsx
(+151 files in other folders)
